--- a/SecretAlbum/en.lproj/ViewController.xib
+++ b/SecretAlbum/en.lproj/ViewController.xib
@@ -34,7 +34,7 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUINavigationController" id="609111713">
+			<object class="IBUINavigationController" id="1063586215">
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 					<int key="IBUIInterfaceOrientation">1</int>
@@ -43,7 +43,7 @@
 				<bool key="IBUIDefinesPresentationContext">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUINavigationBar" key="IBUINavigationBar" id="347858299">
+				<object class="IBUINavigationBar" key="IBUINavigationBar" id="815157859">
 					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<string key="NSFrameSize">{0, 0}</string>
@@ -57,25 +57,24 @@
 					</object>
 				</object>
 				<array class="NSMutableArray" key="IBUIViewControllers">
-					<object class="IBUIViewController" id="1037363396">
-						<object class="IBUINavigationItem" key="IBUINavigationItem" id="8784140">
-							<reference key="IBUINavigationBar"/>
+					<object class="IBUIViewController" id="349871401">
+						<object class="IBUINavigationItem" key="IBUINavigationItem" id="103419242">
 							<string key="IBUITitle">私密云相册</string>
-							<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="1034079316">
+							<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="992115049">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIStyle">1</int>
-								<reference key="IBUINavigationItem" ref="8784140"/>
+								<reference key="IBUINavigationItem" ref="103419242"/>
 								<int key="IBUISystemItemIdentifier">11</int>
 							</object>
-							<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="981323709">
+							<object class="IBUIBarButtonItem" key="IBUIRightBarButtonItem" id="954269518">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIStyle">1</int>
-								<reference key="IBUINavigationItem" ref="8784140"/>
+								<reference key="IBUINavigationItem" ref="103419242"/>
 								<int key="IBUISystemItemIdentifier">4</int>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="609111713"/>
+						<reference key="IBUIParentViewController" ref="1063586215"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -91,16 +90,16 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">rightBarBtnTapped:</string>
-						<reference key="source" ref="981323709"/>
-						<reference key="destination" ref="1037363396"/>
+						<reference key="source" ref="954269518"/>
+						<reference key="destination" ref="349871401"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">leftBarBtnTapped:</string>
-						<reference key="source" ref="1034079316"/>
-						<reference key="destination" ref="609111713"/>
+						<reference key="source" ref="992115049"/>
+						<reference key="destination" ref="1063586215"/>
 					</object>
 					<int key="connectionID">17</int>
 				</object>
@@ -126,44 +125,44 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="609111713"/>
+						<reference key="object" ref="1063586215"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1037363396"/>
-							<reference ref="347858299"/>
+							<reference ref="349871401"/>
+							<reference ref="815157859"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="1037363396"/>
+						<reference key="object" ref="349871401"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="8784140"/>
+							<reference ref="103419242"/>
 						</array>
-						<reference key="parent" ref="609111713"/>
+						<reference key="parent" ref="1063586215"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="347858299"/>
-						<reference key="parent" ref="609111713"/>
+						<reference key="object" ref="815157859"/>
+						<reference key="parent" ref="1063586215"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="8784140"/>
+						<reference key="object" ref="103419242"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="981323709"/>
-							<reference ref="1034079316"/>
+							<reference ref="954269518"/>
+							<reference ref="992115049"/>
 						</array>
-						<reference key="parent" ref="1037363396"/>
+						<reference key="parent" ref="349871401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="981323709"/>
-						<reference key="parent" ref="8784140"/>
+						<reference key="object" ref="954269518"/>
+						<reference key="parent" ref="103419242"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="1034079316"/>
-						<reference key="parent" ref="8784140"/>
+						<reference key="object" ref="992115049"/>
+						<reference key="parent" ref="103419242"/>
 					</object>
 				</array>
 			</object>
@@ -187,32 +186,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">17</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PhotoAlbumViewController</string>
-					<string key="superclassName">UINavigationController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="leftBarBtnTapped:">id</string>
-						<string key="pushBtnTapped:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="leftBarBtnTapped:">
-							<string key="name">leftBarBtnTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="pushBtnTapped:">
-							<string key="name">pushBtnTapped:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PhotoAlbumViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
